--- a/app/src/main/res/layout/activity_product_form.xml
+++ b/app/src/main/res/layout/activity_product_form.xml
@@ -6,33 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:background="@drawable/tybw">
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="10dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Character Name"
+            android:textSize="15dp"
+            android:layout_marginBottom="3dp"
+            android:textColor="@color/white"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nama barang"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_name"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/borderteks"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textSize="14dp"
+            android:hint="Name"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/et_Name"
-        android:layout_marginBottom="10dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Character Power"
+            android:textSize="15dp"
+            android:layout_marginBottom="3dp"
+            android:textColor="@color/white"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Harga barang"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_power"
+            android:layout_marginBottom="55dp"
+            android:background="@drawable/borderteks"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textSize="14dp"
+            android:hint="Power"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/et_Price"
-        android:layout_marginBottom="20dp"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_submit"
-        android:text="Submit"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_submit"
+            android:text="Submit"
+            android:background="@drawable/borderteks"/>
+
+    </LinearLayout>
 
 </LinearLayout>
