--- a/app/src/main/res/layout/character_item.xml
+++ b/app/src/main/res/layout/character_item.xml
@@ -56,9 +56,9 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVerticald_bias="0.25"
+        app:layout_constraintVertical_bias="0.25"
         tools:ignore="MissingConstraints"
-        android:backgroundTint="#0027FF"/>
+        android:backgroundTint="#193CFF"/>
 
-d
+
 </androidx.constraintlayout.widget.ConstraintLayout>
